other/gke/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-secret-app
  labels:
    app: python-secret-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-secret-app
  template:
    metadata:
      labels:
        app: python-secret-app
    spec:
      serviceAccountName: python-app-ksa
      containers:
        - name: app
          image: gcr.io/gke-test-459719/python-secret-app:latest
          ports:
            - containerPort: 8080
