other/gke/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-secret-service
spec:
  selector:
    app: python-secret-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
